<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="100">

        <ImageView
            android:id="@+id/logoinverted"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/spacing_normal"
                android:text="@string/register_instruction"
                android:textColor="@color/colorPrimary" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_big"
                android:hint="@string/login_hint"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_big"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRetype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_big"
                android:hint="@string/password_hint_retype"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_big"
                android:hint="@string/password_hint"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/registerButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_big"
                android:layout_marginTop="@dimen/spacing_big"
                android:padding="@dimen/spacing_big"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_large"
                app:backgroundTint="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>